service CreateVm {
    rpc ListAvailableImages (Region) returns (stream Image) {}
    rpc Create (CreationRequest) returns (stream Status) {}
}

message Region {
    string name = 1;
}
message Image {
    string offer = 1;
    string publisher = 2;
    string sku = 3;
    string urn = 4;
    string urnAlias = 5;
    string verion = 6;
}
message CreationRequest {
    boolean userConfirmation = 1;
    Image selectedImage = 2;
    string cpuType = 3;
    int cpuCount = 4;
}
message Status {
    boolean created = 1;
    string error = 2;
}

//=====================================================================
service ImageAvailability {
    rpc IsImageAvailable(AvailabilityRequest ) returns (Response) {}
}

message SelectedImage {
    Image image = 1;
}
message Response {
    boolean imageAvailable = 1;
}

=====================================================================

service CapacityAvailability {
    rpc IsCapacityAvailable(CapacityRequest) returns (CapacityResponse) {}
}
message CapacityRequest {
    string cpuType = 1;
    int cpuCount = 2;
}
message CapacityResponse {
    capacityAvailable = 1;
}

//=====================================================================